--- a/src/app/artists/artist-list/artist-list.component.html
+++ b/src/app/artists/artist-list/artist-list.component.html
@@ -1,6 +1,7 @@
-<div class="artist-list">
-  <div *ngFor="let artist of artists" class="">
+<div>
+  <div *ngFor="let artist of artists" class="artist-item">
     <h2>{{ artist.name }}</h2>
-    <img [src]="artist.photo" alt="{{ artist.name }}'s photo">
+    <img [src]="artist.photo" alt="{{ artist.name }}'s photo" *ngIf="artist.photo">
+    <button (click)="onDelete(artist)">Delete artist</button>
   </div>
 </div>
